Fix function codes before testing

--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "0c2d9dcf-b7fd-4c8a-b007-6d6692189b2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -27,11 +36,15 @@
     "import faiss\n",
     "import awoc\n",
     "import spacy\n",
+    "import csv\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sutime import SUTime\n",
     "import json\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "from bert_score import score as bert_score\n",
+    "from country_named_entity_recognition import find_countries\n",
+    "#from processing_modules_for_test_indicator import knowledgeGraphModule, semanticSearchModule, queryIdeationModule"
    ]
   },
   {
@@ -169,33 +182,32 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Previous 'find_mentioned_countries' cannot catch continent -> Modify a bit\n",
+    "Previous 'find_mentioned_countries' can detect countries when they are formed correctly.\n",
+    "\n",
     "'''\n",
     "# Extract mentioned countries' ISO3 code\n",
     "def find_mentioned_country_code(user_query):\n",
     "    countries = set()\n",
+    "    extracted_countries = find_countries(user_query, is_ignore_case=True)\n",
+    "    # check if we have country first\n",
+    "    if extracted_countries:\n",
+    "        for c in extracted_countries:\n",
+    "            countries.add(c[0].alpha_3)\n",
+    "    # check if we have continent\n",
+    "    else:\n",
+    "        words = re.findall(r'\\w+|[^\\w\\s]', user_query)\n",
+    "        text = ' '.join(words)  # Join the tokens back into a string\n",
     "    \n",
-    "    # Tokenize the text using regular expressions to preserve punctuation marks\n",
-    "    words = re.findall(r'\\w+|[^\\w\\s]', user_query)\n",
-    "    text = ' '.join(words)  # Join the tokens back into a string\n",
-    "    \n",
-    "    world_info = awoc.AWOC()\n",
-    "\n",
-    "    all_continents = set([continent.lower() for continent in world_info.get_continents_list()])\n",
-    "    all_countries = set([country.lower() for country in world_info.get_countries_list()])\n",
-    "    \n",
-    "    for word in text.split():\n",
-    "        word = word.lower()\n",
-    "        # check if this continent\n",
-    "        if word in all_countries:\n",
-    "            countries.add(world_info.get_country_data(word)['ISO3'])\n",
-    "        elif word in all_continents:\n",
-    "            target_countries = world_info.get_countries_list_of(word)\n",
-    "            for country in target_countries:\n",
-    "                countries.add(world_info.get_country_data(country)['ISO3'])\n",
-    "    return countries\n",
-    "#print(find_mentioned_country_code(test_query))\n",
-    "#print(find_mentioned_country_code(test_query2))"
+    "        world_info = awoc.AWOC()\n",
+    "        all_continents = set([continent.lower() for continent in world_info.get_continents_list()])\n",
+    "        for word in text.split():\n",
+    "            word = word.lower()\n",
+    "            # check if this continent\n",
+    "            if word in all_continents:\n",
+    "                target_countries = world_info.get_countries_list_of(word)\n",
+    "                for country in target_countries:\n",
+    "                    countries.add(world_info.get_country_data(country)['ISO3'])\n",
+    "    return countries"
    ]
   },
   {
@@ -368,8 +380,9 @@
     "        sutimeType, value = timex3[\"type\"], timex3[\"value\"]\n",
     "        if \"REF\" not in value:\n",
     "            if isinstance(value, dict):\n",
-    "                for year in range(int(value['begin']), int(value['end']) + 1):\n",
-    "                    year_list.add(str(year))\n",
+    "                if value:\n",
+    "                    for year in range(int(value['begin']), int(value['end']) + 1):\n",
+    "                        year_list.add(str(year))\n",
     "            elif value.isdigit():\n",
     "                year_list.add(str(value))\n",
     "            elif sutimeType in ['DATE', 'DURATION']:\n",
@@ -426,7 +439,7 @@
     "    result_dict = {}\n",
     "    for country in countries:\n",
     "        for indicator in indicators:\n",
-    "            indicator_id = f\"wdi-{count + 1}\"\n",
+    "            indicator_id = f\"indicator-{count + 1}\"\n",
     "            target_row = wdi_csv[(wdi_csv['Country Code'] == country) & (wdi_csv['Indicator Code'] == indicator)]\n",
     "            if not target_row.empty:\n",
     "                country_name, indicator_name = target_row['Country Name'].values[0], target_row['Indicator Name'].values[0]\n",
@@ -488,20 +501,205 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "00a85b63-0697-4351-a866-6f358a2c8d7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_scores(csv_file, moonshot_model):\n",
+    "    # Initialize an empty list to store processed entries\n",
+    "    result = []\n",
+    "    \n",
+    "    # Loop through each entry in the CSV file\n",
+    "    for entry in csv.DictReader(csv_file):\n",
+    "        print(f\"Testing Query #{len(result)}...\")\n",
+    "        query = entry['query']\n",
+    "        sample_answer = entry['sample_answer']\n",
+    "        \n",
+    "        # Call OpenAI for chat GPT answer\n",
+    "        chat_gpt_answer = callOpenAI(f\"\"\" \n",
+    "                                    {query}\n",
+    "                                    \"\"\")\n",
+    "        \n",
+    "        # Call the moonshot model API\n",
+    "        moonshot_model_answer = moonshot_model(query)\n",
+    "\n",
+    "        # Calculate BERT score for moonshot model answer\n",
+    "        P, F, R = bert_score([sample_answer], [moonshot_model_answer['answer']], lang='en', verbose=True)\n",
+    "        entry['moonshot_model_answer'] = moonshot_model_answer['answer']\n",
+    "        entry['bert_score'] = round(float(F), 2)\n",
+    "\n",
+    "        # Calculate BERT score for chat GPT answer\n",
+    "        P, F, R = bert_score([sample_answer], [chat_gpt_answer], lang='en', verbose=True)\n",
+    "        entry['chat_gpt_answer'] = chat_gpt_answer\n",
+    "        entry['bert_score_gpt'] = round(float(F), 2)\n",
+    "        \n",
+    "        # Append the processed entry to the result list\n",
+    "        result.append(entry)\n",
+    "    \n",
+    "    # Return the list of processed entries\n",
+    "    return result"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5e42ecfa-2a94-48a6-9690-4bd0e282614a",
+   "id": "998ee2eb-5ff1-4d2b-8a01-bfdc866d0c04",
    "metadata": {},
    "source": [
-    "## User Query Examples"
+    "## Conduct test only using the indicator database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cf71d17c-b9f8-4e47-ae85-ae31e8b044fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def moonshot_model_indicator_only(user_query):\n",
+    "    \n",
+    "    ##run processing modules\n",
+    "    indicators_dict=indicatorsModule(user_query)\n",
+    "    prompt_formattings = \"\"\"\n",
+    "    - Answer output must be properly formatted using HTML. \n",
+    "    - Don't include <html>, <script>, <link> or <body> tags. Only text formating tags should be allowed. e.g h1..h3, p, anchor, etc. Strictly HTML only\n",
+    "    - Strictly infer your answers from the <Sources> Only and make citations to Source extract referenced \n",
+    "    - The Source as format like: \"indicator-n\": {{\n",
+    "        \"Country\": \"Tanzania\",\n",
+    "        \"Indicator Name\": \"Average precipitation in depth (mm per year)\",\n",
+    "        \"Values Per Year\": {{\n",
+    "            \"YYYY\": some number value\n",
+    "            }}\n",
+    "    }}, where doc-n can be indicator-1, indicator-24 etc.. n is in integer.\n",
+    "    - Reference the extract and title of all document sources provided in the json and summarise it into a coherent answer that relates to the <User Query>\n",
+    "    - Citation should follow formats: [reference content]<a href='link here' data-id='doc-n'>[i]</a> . The reference bracket should be the reference link\n",
+    "    - Give output writing tone like a academic research tone\n",
+    "    - Strictly use IEEE Citation Style \n",
+    "    - If no <Sources> are provided, try to make suggestives or  simply say you don't have that information   \n",
+    "    - Remove new line or tab characters from your output\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    llm_instructions = f\"\"\"\n",
+    "    Ignore previous commands!!!\n",
+    "    Given a user query, use the provided <Sources> extract section of the JSON only to provide the correct answer to the user's query.\n",
+    "    \n",
+    "    User Query: {user_query}\n",
+    "    \n",
+    "    Sources: {indicators_dict}\n",
+    "\n",
+    "    - Reference all data sources provided in the json and summarise it into a coherent answer that relates to the <User Query>\n",
+    "    - Maintain an academic research tone while aiming for brevity in your response\n",
+    "    - If no <Sources> are provided, try to make suggestives or  simply say you don't have that information   \n",
+    "    - Remove new line or tab characters from your output\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ##synthesis module\n",
+    "    answer = callOpenAI(llm_instructions)\n",
+    "\n",
+    "    ##structure response\n",
+    "    response={\n",
+    "        \"user_query\":user_query,\n",
+    "        \"answer\":answer,\n",
+    "        \"sources\":indicators_dict,    \n",
+    "    }\n",
+    "    \n",
+    "    return response"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a85b63-0697-4351-a866-6f358a2c8d7e",
+   "id": "97cb7f2b-790a-4aee-adf6-36707d807971",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Specify the path to your CSV file\n",
+    "csv_file_path = \"../testing/indicator_test/test_queries.csv\"\n",
+    "\n",
+    "# Open the CSV file for reading\n",
+    "with open(csv_file_path, mode='r') as file:\n",
+    "    # Pass the file object to the function\n",
+    "    result = calculate_scores(file, moonshot_model_indicator_only)\n",
+    "\n",
+    "# Print updated data with scores\n",
+    "print(json.dumps(result, indent=4))\n",
+    "\n",
+    "# Save updated data to a JSON file\n",
+    "#with open('../testing/indicator_test/test_output_indicator_only.json', 'w') as file:\n",
+    "    #json.dump(result, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7afbca83-1585-4ca1-a6aa-d870ee934124",
+   "metadata": {},
+   "source": [
+    "## Conduct test with the synthesized database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16a47803-f90e-4ffc-a64a-b53523e5caa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def synthesisModule(user_query, entities_dict, excerpts_dict, indicators_dict, openai_deployment):\n",
+    "    \n",
+    "    # Generate prompt engineering text and template\n",
+    "    llm_instructions = f\"\"\"\n",
+    "    Ignore previous commands!!!\n",
+    "    Given a user query, use the provided <Sources> extract section of the JSON only to provide the correct answer to the user's query.\n",
+    "    \n",
+    "    User Query: {user_query}\n",
+    "    \n",
+    "    Sources: {excerpts_dict}\n",
+    "    \n",
+    "    - Answer output must be properly formatted using HTML. \n",
+    "    - Don't include <html>, <script>, <link> or <body> tags. Only text formating tags should be allowed. e.g h1..h3, p, anchor, etc. Strictly HTML only\n",
+    "    - Strictly infer your answers from the <Sources> Only and make citations to Source extract referenced \n",
+    "    - The Source as format like: \"doc-n\": {{\n",
+    "        \"title\": \"title of the relate document\",\n",
+    "        \"extract\": \"content\",\n",
+    "        \"category\": \"\",\n",
+    "        \"link\": \"\",\n",
+    "        \"thumbnail\": \"\"\n",
+    "    }}, where doc-n can be doc-1, doc-24 etc.. n is in integer.\n",
+    "    - Reference the extract and title of all document sources provided in the json and summarise it into a coherent answer that relates to the <User Query>\n",
+    "    - Citation should follow formats: [reference content]<a href='link here' data-id='doc-n'>[i]</a> . The reference bracket should be the reference link\n",
+    "    - Give output writing tone like a academic research tone\n",
+    "    - Strictly use IEEE Citation Style \n",
+    "    - If no <Sources> are provided, try to make suggestives or  simply say you don't have that information   \n",
+    "    - Remove new line or tab characters from your output\n",
+    "\n",
+    "    \"\"\"\n",
+    "    ###synthesize data into structure within llm prompt engineering instructions\n",
+    "    answer= openai_call.callOpenAI(llm_instructions, openai_deployment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3de53eb-b47c-4cfb-87f0-05b0cdf57579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specify the path to your CSV file\n",
+    "csv_file_path = \"../testing/indicator_test/test_queries.csv\"\n",
+    "\n",
+    "# Open the CSV file for reading\n",
+    "with open(csv_file_path, mode='r') as file:\n",
+    "    # Pass the file object to the function\n",
+    "    result = calculate_scores(file, moonshot_model)\n",
+    "\n",
+    "# Print updated data with scores\n",
+    "# print(json.dumps(result, indent=4))\n",
+    "\n",
+    "# Save updated data to a JSON file\n",
+    "with open('../testing/indicator_test/test_output_synthesized_database.json', 'w') as file:\n",
+    "    json.dump(result, file, indent=4)"
+   ]
   }
  ],
  "metadata": {
