--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -44,7 +44,11 @@
     "from datetime import datetime\n",
     "from bert_score import score as bert_score\n",
     "from country_named_entity_recognition import find_countries\n",
-    "#from processing_modules_for_test_indicator import knowledgeGraphModule, semanticSearchModule, queryIdeationModule"
+    "\n",
+    "import sys\n",
+    "sys.path.insert(1, '../utils')\n",
+    "\n",
+    "from processing_modules_for_test_indicator import semanticSearchModule"
    ]
   },
   {
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5094b8b1-234b-46e0-ae38-130d6f4a57e8",
    "metadata": {},
    "outputs": [],
@@ -246,17 +250,17 @@
     "    \n",
     "    return length, embedding\n",
     "\n",
-    "wdi_series['token_length'], wdi_series['Embedding'] = zip(*wdi_series.apply(lambda row: create_embedding(row), axis=1))"
+    "#wdi_series['token_length'], wdi_series['Embedding'] = zip(*wdi_series.apply(lambda row: create_embedding(row), axis=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "f53dfdb7-12dd-43cc-a860-d880ce8fdf8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wdi_series.to_pickle('../data/indicator_meta_embed.pkl')"
+    "#wdi_series.to_pickle('../data/indicator_meta_embed.pkl')"
    ]
   },
   {
@@ -269,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9e3b703a-57b3-493a-862c-8160d152acd7",
    "metadata": {},
    "outputs": [],
@@ -279,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3eab9be9-a94b-40cd-8c23-70efbb217489",
    "metadata": {},
    "outputs": [],
@@ -299,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "96a5e173-6a61-4a48-bb68-180e698e1afd",
    "metadata": {},
    "outputs": [],
@@ -331,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "2f51e73a-597b-41c1-a2e0-76d3fece207b",
    "metadata": {},
    "outputs": [],
@@ -368,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "a40d575b-c8ba-4ff5-baba-3002debe466c",
    "metadata": {},
    "outputs": [],
@@ -406,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "56c2e1fc-0840-46eb-b515-02ac8c12ac41",
    "metadata": {},
    "outputs": [],
@@ -427,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "4d45b480-44fa-4fd7-b02a-83eda2cedab1",
    "metadata": {},
    "outputs": [],
@@ -468,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "e64e007e-c4cf-4876-a39a-361d31556c06",
    "metadata": {},
    "outputs": [],
@@ -502,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "00a85b63-0697-4351-a866-6f358a2c8d7e",
    "metadata": {},
    "outputs": [],
@@ -552,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "cf71d17c-b9f8-4e47-ae85-ae31e8b044fe",
    "metadata": {},
    "outputs": [],
@@ -561,25 +565,6 @@
     "    \n",
     "    ##run processing modules\n",
     "    indicators_dict=indicatorsModule(user_query)\n",
-    "    prompt_formattings = \"\"\"\n",
-    "    - Answer output must be properly formatted using HTML. \n",
-    "    - Don't include <html>, <script>, <link> or <body> tags. Only text formating tags should be allowed. e.g h1..h3, p, anchor, etc. Strictly HTML only\n",
-    "    - Strictly infer your answers from the <Sources> Only and make citations to Source extract referenced \n",
-    "    - The Source as format like: \"indicator-n\": {{\n",
-    "        \"Country\": \"Tanzania\",\n",
-    "        \"Indicator Name\": \"Average precipitation in depth (mm per year)\",\n",
-    "        \"Values Per Year\": {{\n",
-    "            \"YYYY\": some number value\n",
-    "            }}\n",
-    "    }}, where doc-n can be indicator-1, indicator-24 etc.. n is in integer.\n",
-    "    - Reference the extract and title of all document sources provided in the json and summarise it into a coherent answer that relates to the <User Query>\n",
-    "    - Citation should follow formats: [reference content]<a href='link here' data-id='doc-n'>[i]</a> . The reference bracket should be the reference link\n",
-    "    - Give output writing tone like a academic research tone\n",
-    "    - Strictly use IEEE Citation Style \n",
-    "    - If no <Sources> are provided, try to make suggestives or  simply say you don't have that information   \n",
-    "    - Remove new line or tab characters from your output\n",
-    "    \"\"\"\n",
-    "    \n",
     "    llm_instructions = f\"\"\"\n",
     "    Ignore previous commands!!!\n",
     "    Given a user query, use the provided <Sources> extract section of the JSON only to provide the correct answer to the user's query.\n",
@@ -623,16 +608,16 @@
     "    result = calculate_scores(file, moonshot_model_indicator_only)\n",
     "\n",
     "# Print updated data with scores\n",
-    "print(json.dumps(result, indent=4))\n",
+    "#print(json.dumps(result, indent=4))\n",
     "\n",
     "# Save updated data to a JSON file\n",
-    "#with open('../testing/indicator_test/test_output_indicator_only.json', 'w') as file:\n",
-    "    #json.dump(result, file, indent=4)"
+    "with open('../testing/indicator_test/test_output_indicator_only.json', 'w') as file:\n",
+    "    json.dump(result, file, indent=4)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7afbca83-1585-4ca1-a6aa-d870ee934124",
+   "id": "d07b536f-83b0-49c6-9422-5bf0f0b3112f",
    "metadata": {},
    "source": [
     "## Conduct test with the synthesized database"
@@ -640,48 +625,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "16a47803-f90e-4ffc-a64a-b53523e5caa4",
+   "execution_count": 19,
+   "id": "06ac498d-c234-45f1-9fe2-7cb34215d1e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def synthesisModule(user_query, entities_dict, excerpts_dict, indicators_dict, openai_deployment):\n",
+    "def moonshot_model(user_query):\n",
     "    \n",
-    "    # Generate prompt engineering text and template\n",
+    "    ##run processing modules\n",
+    "    \n",
+    "    indicators_dict=indicatorsModule(user_query)\n",
+    "    excerpts_dict = semanticSearchModule(user_query, client, embedding_model)\n",
+    "    \n",
     "    llm_instructions = f\"\"\"\n",
     "    Ignore previous commands!!!\n",
     "    Given a user query, use the provided <Sources> extract section of the JSON only to provide the correct answer to the user's query.\n",
     "    \n",
     "    User Query: {user_query}\n",
     "    \n",
-    "    Sources: {excerpts_dict}\n",
-    "    \n",
-    "    - Answer output must be properly formatted using HTML. \n",
-    "    - Don't include <html>, <script>, <link> or <body> tags. Only text formating tags should be allowed. e.g h1..h3, p, anchor, etc. Strictly HTML only\n",
-    "    - Strictly infer your answers from the <Sources> Only and make citations to Source extract referenced \n",
-    "    - The Source as format like: \"doc-n\": {{\n",
-    "        \"title\": \"title of the relate document\",\n",
-    "        \"extract\": \"content\",\n",
-    "        \"category\": \"\",\n",
-    "        \"link\": \"\",\n",
-    "        \"thumbnail\": \"\"\n",
-    "    }}, where doc-n can be doc-1, doc-24 etc.. n is in integer.\n",
-    "    - Reference the extract and title of all document sources provided in the json and summarise it into a coherent answer that relates to the <User Query>\n",
-    "    - Citation should follow formats: [reference content]<a href='link here' data-id='doc-n'>[i]</a> . The reference bracket should be the reference link\n",
-    "    - Give output writing tone like a academic research tone\n",
-    "    - Strictly use IEEE Citation Style \n",
+    "    Sources: [{excerpts_dict}, {indicators_dict}]\n",
+    "\n",
+    "    - Reference all data sources provided in the json and summarise it into a coherent answer that relates to the <User Query>\n",
+    "    - Maintain an academic research tone while aiming for brevity in your response\n",
     "    - If no <Sources> are provided, try to make suggestives or  simply say you don't have that information   \n",
     "    - Remove new line or tab characters from your output\n",
-    "\n",
     "    \"\"\"\n",
-    "    ###synthesize data into structure within llm prompt engineering instructions\n",
-    "    answer= openai_call.callOpenAI(llm_instructions, openai_deployment)"
+    "    \n",
+    "    ##synthesis module\n",
+    "    answer = callOpenAI(llm_instructions)\n",
+    "\n",
+    "    ##structure response\n",
+    "    response={\n",
+    "        \"user_query\":user_query,\n",
+    "        \"answer\":answer,\n",
+    "        \"sources\":indicators_dict,    \n",
+    "    }\n",
+    "    \n",
+    "    return response"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3de53eb-b47c-4cfb-87f0-05b0cdf57579",
+   "id": "b66bcd25-1a07-438c-afdb-f06c6840c425",
    "metadata": {},
    "outputs": [],
    "source": [
