Finish testing on indicator dataset

--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -9,6 +9,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "053701cb-254e-4c3b-9146-2e570341c750",
+   "metadata": {},
+   "source": [
+    "Instructions for SUTime (Taken from this page: https://github.com/FraBle/python-sutime)\n",
+    "\n",
+    "To install SUTime, follow these steps:\n",
+    "```python\n",
+    "# Ideally, create a virtual environment before installing any dependencies\n",
+    "pip install sutime\n",
+    "# Install Java dependencies\n",
+    "mvn dependency:copy-dependencies -DoutputDirectory=./jars -f $(python3 -c 'import importlib; import pathlib; print(pathlib.Path(importlib.util.find_spec(\"sutime\").origin).parent / \"pom.xml\")')\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0c2d9dcf-b7fd-4c8a-b007-6d6692189b2e",
@@ -556,8 +572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "cf71d17c-b9f8-4e47-ae85-ae31e8b044fe",
+   "execution_count": 32,
+   "id": "3b751eb6-347c-4b55-94ee-d3ffc27d0be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,9 +589,9 @@
     "    \n",
     "    Sources: {indicators_dict}\n",
     "\n",
-    "    - Reference all data sources provided in the json and summarise it into a coherent answer that relates to the <User Query>\n",
-    "    - Maintain an academic research tone while aiming for brevity in your response\n",
-    "    - If no <Sources> are provided, try to make suggestives or  simply say you don't have that information   \n",
+    "    - Among the given data sources provided in the json, reference all of them, but only use the materials necessary to answer the <User Query>\n",
+    "    - Keep your response concise and maintain a formal academic tone. Avoid providing lengthy answers.\n",
+    "    - If no or only some <Sources> are provided, attempt to make suggestions or provide a partial response. If unable to obtain any answer, simply state that you don't have that information.  \n",
     "    - Remove new line or tab characters from your output\n",
     "    \"\"\"\n",
     "    \n",
@@ -594,19 +610,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "97cb7f2b-790a-4aee-adf6-36707d807971",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 33,
+   "id": "7f691c87-e755-4807-b385-cb4c70bb78e3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Query #0...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Query #1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Query #2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Query #3...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
+     ]
+    }
+   ],
    "source": [
+    "# Test only using indicator database\n",
+    "\n",
     "# Specify the path to your CSV file\n",
     "csv_file_path = \"../testing/indicator_test/test_queries.csv\"\n",
     "\n",
+    "result = []\n",
     "# Open the CSV file for reading\n",
     "with open(csv_file_path, mode='r') as file:\n",
-    "    # Pass the file object to the function\n",
-    "    result = calculate_scores(file, moonshot_model_indicator_only)\n",
-    "\n",
+    "    for entry in csv.DictReader(file):\n",
+    "        print(f\"Testing Query #{len(result)}...\")\n",
+    "        query = entry['query']\n",
+    "        sample_answer = entry['sample_answer']\n",
+    "        \n",
+    "        # Call OpenAI for chat GPT answer\n",
+    "        chat_gpt_answer = callOpenAI(f\"{query}\")\n",
+    "        # Call the moonshot model API\n",
+    "        moonshot_model_answer = moonshot_model_indicator_only(query)\n",
+    "        \n",
+    "        entry['moonshot_model_answer'] = moonshot_model_answer['answer']\n",
+    "        entry['chat_gpt_answer'] = chat_gpt_answer\n",
+    "        \n",
+    "        # Append the processed entry to the result list\n",
+    "        result.append(entry)\n",
+    "        \n",
     "# Print updated data with scores\n",
     "#print(json.dumps(result, indent=4))\n",
     "\n",
@@ -625,67 +740,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "06ac498d-c234-45f1-9fe2-7cb34215d1e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def moonshot_model(user_query):\n",
-    "    \n",
-    "    ##run processing modules\n",
-    "    \n",
-    "    indicators_dict=indicatorsModule(user_query)\n",
-    "    excerpts_dict = semanticSearchModule(user_query, client, embedding_model)\n",
-    "    \n",
-    "    llm_instructions = f\"\"\"\n",
-    "    Ignore previous commands!!!\n",
-    "    Given a user query, use the provided <Sources> extract section of the JSON only to provide the correct answer to the user's query.\n",
-    "    \n",
-    "    User Query: {user_query}\n",
-    "    \n",
-    "    Sources: [{excerpts_dict}, {indicators_dict}]\n",
-    "\n",
-    "    - Reference all data sources provided in the json and summarise it into a coherent answer that relates to the <User Query>\n",
-    "    - Maintain an academic research tone while aiming for brevity in your response\n",
-    "    - If no <Sources> are provided, try to make suggestives or  simply say you don't have that information   \n",
-    "    - Remove new line or tab characters from your output\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    ##synthesis module\n",
-    "    answer = callOpenAI(llm_instructions)\n",
-    "\n",
-    "    ##structure response\n",
-    "    response={\n",
-    "        \"user_query\":user_query,\n",
-    "        \"answer\":answer,\n",
-    "        \"sources\":indicators_dict,    \n",
-    "    }\n",
-    "    \n",
-    "    return response"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "b66bcd25-1a07-438c-afdb-f06c6840c425",
+   "id": "3b33615f-13db-44a6-9017-8f874d5b2b42",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Specify the path to your CSV file\n",
-    "csv_file_path = \"../testing/indicator_test/test_queries.csv\"\n",
-    "\n",
-    "# Open the CSV file for reading\n",
-    "with open(csv_file_path, mode='r') as file:\n",
-    "    # Pass the file object to the function\n",
-    "    result = calculate_scores(file, moonshot_model)\n",
-    "\n",
-    "# Print updated data with scores\n",
-    "# print(json.dumps(result, indent=4))\n",
-    "\n",
-    "# Save updated data to a JSON file\n",
-    "with open('../testing/indicator_test/test_output_synthesized_database.json', 'w') as file:\n",
-    "    json.dump(result, file, indent=4)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
