Modify find_target_period function

--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -26,19 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "id": "0c2d9dcf-b7fd-4c8a-b007-6d6692189b2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -55,11 +46,12 @@
     "import csv\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sutime import SUTime\n",
+    "#from sutime import SUTime\n",
     "import json\n",
-    "from datetime import datetime\n",
+    "import datetime\n",
     "from bert_score import score as bert_score\n",
     "from country_named_entity_recognition import find_countries\n",
+    "import ast\n",
     "\n",
     "import sys\n",
     "sys.path.insert(1, '../utils')\n",
@@ -383,12 +375,20 @@
    "id": "54971fae-ddcf-4caf-b0fe-1c3c6240f746",
    "metadata": {},
    "source": [
-    "# Function for searching target period (1960 - 2023) (Third Condition Done ✅)"
+    "# Function for searching target period (1960 - 2023) (Third Condition)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad977de-aabd-4857-aaf9-0f980be92b0f",
+   "metadata": {},
+   "source": [
+    "First Trial - Package is too heavy❌"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "a40d575b-c8ba-4ff5-baba-3002debe466c",
    "metadata": {},
    "outputs": [],
@@ -421,20 +421,70 @@
     "                            year_dur -= 1\n",
     "            else:\n",
     "                continue\n",
-    "    return list(year_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "56c2e1fc-0840-46eb-b515-02ac8c12ac41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return list(year_list)\n",
+    "    \n",
     "def find_target_period(user_query):\n",
     "    sutime = SUTime(mark_time_ranges = True, include_range = True)\n",
     "    res = sutime.parse(user_query)\n",
     "    return timex3_to_year_list(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ecc03ad-6020-4c87-9562-424fc8e413fa",
+   "metadata": {},
+   "source": [
+    "Second Trial - using GPT. Works pretty well ✅"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "f8d2d6f1-fc02-4f0f-a31f-75d2d4c79ab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_target_period(user_query):\n",
+    "    current_year = datetime.date.today().year\n",
+    "    gpt_prompt = f\"\"\"\n",
+    "    Identify and extract all the years mentioned in the provided user query, returning them as a list. Current year is {current_year}\n",
+    "    The format of the output should be a list of strings, each representing a year, e.g., [\\\"2020\\\", \\\"2021\\\"].\n",
+    "\n",
+    "    User Query: {user_query}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    answer = callOpenAI(gpt_prompt)\n",
+    "\n",
+    "    year_list = ast.literal_eval(answer)\n",
+    "    \n",
+    "    return year_list if year_list else []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "59551b17-a78f-4aaf-9f0b-c7d13463e6e3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2019', '2020', '2021', '2022', '2023']\n",
+      "['2021']\n",
+      "['2020', '2021', '2022', '2023']\n"
+     ]
+    }
+   ],
+   "source": [
+    "test1 = \"past 5 years\"\n",
+    "test2 = \"in 2021\"\n",
+    "test3 = \"from 2020 to 2023\"\n",
+    "print(find_target_period(test1))\n",
+    "print(find_target_period(test2))\n",
+    "print(find_target_period(test3))"
    ]
   },
   {
@@ -447,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 104,
    "id": "4d45b480-44fa-4fd7-b02a-83eda2cedab1",
    "metadata": {},
    "outputs": [],
@@ -488,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "id": "e64e007e-c4cf-4876-a39a-361d31556c06",
    "metadata": {},
    "outputs": [],
@@ -522,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "id": "00a85b63-0697-4351-a866-6f358a2c8d7e",
    "metadata": {},
    "outputs": [],
@@ -572,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "id": "3b751eb6-347c-4b55-94ee-d3ffc27d0be2",
    "metadata": {},
    "outputs": [],
@@ -610,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 105,
    "id": "7f691c87-e755-4807-b385-cb4c70bb78e3",
    "metadata": {
     "scrolled": true
@@ -620,80 +670,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Query #0...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing Query #1...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing Query #2...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Testing Query #0...\n",
+      "Testing Query #1...\n",
+      "Testing Query #2...\n",
       "Testing Query #3...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
      ]
     }
    ],
